index.html. TODO, avoid DOM flickering

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -9,3 +9,8 @@ body
     color:#000000;
     background-color: #FFFFFF;
 }
+
+#matrix-jumbotron
+{
+    background-color: #0000FF;
+}
